# FasMan

./: Cargo.toml  README.md  TreeVal.yaml  TreeValWindows.yaml  debug.txt  katex-header.html  output.fa  test.fasta  validator_ouput.txt
.github/workflows/: documentation.yml  release-repo.yml  tag-repo.yml  test-lint.yml
TreeValTestDir/assembly/: test.fasta
src/: exclude_seq.rs  filter_fasta.rs  generate_csv.rs  generics.rs  lib.rs  main.rs  map_headers.rs  mapheaders.rs  processors.rs  remap_head.rs  split_by_count.rs  split_by_size.rs  split_scaffolds.rs  splitbycount.rs  splitbysize.rs  tpf_fasta.rs  yaml_validator.rs  yamlvalidator.rs
src/cli/: mod.rs
src/errors/: file_error.rs
src/file_utils/: file_utility.rs  mod.rs
src/processors/: exclude_seq.rs  map_headers.rs  mod.rs  remap_head.rs  split_by_count.rs  split_by_size.rs  tpf_fasta.rs  yaml_validator.rs
test-data/yaml/: test.yaml
test_data/filterfasta/: FiilteredFasta.fa  names.lst
test_data/geneset_csv/: iyAndFlav1.101-data.csv
test_data/iyAndFlav1/: curated.fasta  debug.txt
test_data/iyAndFlav1/full/: iyAndFlav1.curated_subset.tpf  iyAndFlav1_subset.fa  iyAndFlav1_subset.fa.fai
test_data/iyAndFlav1/small/: small_test.curated.tpf  small_test.fa  small_test.fa.fai  small_test.output.fasta
test_data/iyAndFlav1/tiny/: tiny_test.curated.tpf  tiny_test.fa  tiny_test.fa.fai
test_data/synthetic/: headers.txt  tiny.fa
test_data/yaml/: test.yaml
test_output/: mapped-heads.tsv  mapped.fasta
tests/: test_util.rs  tpf_fasta.rs  yaml_validator.rs
tests/util/: mod.rs
(+1 files in other folders)
