[package]
name = "fasta_manipulation"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["cargo"] }
colored = "2.0.4"
compare = "0.1.0"
csv = "1.3.0"
io = "0.0.2"
noodles = { version = "0.78.0", features = ["fasta", "cram", "csi", "core"] }
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
stacker = "0.1.15"
walkdir = "2.5.0"
assert_cmd = "2.0.14"
tempfile = "3.10.1"